# wello-horld-rs

./: Cargo.toml
src/: greeter.rs  main.rs
